--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,13 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".Feedly"
         android:allowBackup="true"
         android:icon="@drawable/ic_feedly"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_feedly"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
+        android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name=".ui.web.WebViewActivity"/>
         <activity android:name=".ui.menu.MenuActivity" />
