--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://plugins.gradle.org/m2/'}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.4, 0.99.99]'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://maven.google.com' }
     }
 }
 
