--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,17 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://plugins.gradle.org/m2/'}
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.12.4, 0.99.99]'
+        // Add the Fabric Crashlytics plugin.
+        classpath 'io.fabric.tools:gradle:1.31.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
